  * The jQuery generators have moved to {the jquery-rails gem}[http://github.com/indirect/jquery-rails].

== 0.12.1
* optimize
  * changed jqueryui option to --ui

== 0.12.0
* enhancements
  * added jqueryui (ProGNOMmers [Maurizio])

== 0.11.0
* enhancements
  * Added new mongo_mapper generator for mongo mapper 0.8 with lots of extra features [Kristian Mandrup]
  * Added mongoid generator for mongoid 2.0.beta with features similar to new mongo_mapper [Kristian Mandrup]
  
* optimize
  * renamed datamapper to data_mapper
  * renamed mongomapper to mongo_mapper.
  
* fix
  * added DataMapper Tests
  * added MongoMapper Tests

== 0.10.4
* optimize
  * Update jquery install by removing unneeded initializer file
  * Update mustache_rails to user autoload_paths instead of load_paths

== 0.10.3
* optimize
  * add --extension option to machinist blueprints. (I like using ".blueprint". --Louis T.)

== 0.10.1
* optimize
  * move mustache generators to correct hidden_namespaces location. (mustache:install was being hidden)

== 0.10.0
* enhancements
  * added mustache:install
  * added mustache:controller
  * added mustache:scaffold
  
* fix
  * fixed shoulda controller CamelCase problem.

== 0.9.2
* enhancements
  * added koala:install

== 0.9.1
* enhancements
  * added jquery:install
  
* optimize
  * simplified haml:install generator.

== 0.9.0

* optimize
  * simplified and clean up generators.
  * Added erubis template engine generator to avoid fighting with rails' built-in erb template engine
  * included Generators
    * authlogic:session

    * datamapper:migration
    * datamapper:model
    * datamapper:observer

    * erubis:controller
    * erubis:scaffold

    * factory_girl:model

    * formtastic:scaffold

    * haml:controller
    * haml:install
    * haml:scaffold

    * machinist:model

    * mongomapper:model
    * mongomapper:observer

    * shoulda:controller
    * shoulda:model

    * simple_form:scaffold