@@ -1,0 +1,5 @@
+Fabricator :<%= singular_name %> do
+<% attributes.each do |attribute| -%>
+  <%= attribute.name %> <%= attribute.default.inspect %>
+<% end -%>
+end
