@@ -76,6 +76,7 @@
     * erubis:controller
     * erubis:scaffold
 
+    * fabrication:model
     * factory_girl:model
 
     * formtastic:scaffold
